examples/test/testpolicy709.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy709
  namespace: namespace482
spec:
  podSelector:
    matchLabels:
      key29: value46
      key28: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value45
          key42: value28
      podSelector:
        matchLabels:
          key5: value0
          key6: value24
